--- a/custom_components/go_musicfox_ha/manifest.json
+++ b/custom_components/go_musicfox_ha/manifest.json
@@ -1,10 +1,10 @@
 {
-  "domain": "go_musicfox_ha",
-  "name": "Go Musicfox HA",
+  "domain": "go_musicfox",
+  "name": "Go Musicfox",
   "config_flow": true,
-  "documentation": "https://github.com/hongkailiu/go-musicfox-ha",
-  "issue_tracker": "https://github.com/hongkailiu/go-musicfox-ha/issues",
-  "codeowners": ["@hongkailiu"],
+  "documentation": "https://github.com/Moha-Master/go-musicfox-ha",
+  "issue_tracker": "https://github.com/Moha-Master/go-musicfox-ha/issues",
+  "codeowners": ["@Moha-Master"],
   "requirements": ["aiohttp-sse-client"],
   "version": "0.1.0",
   "iot_class": "local_polling"
