--- a/custom_components/go_musicfox_ha/services.yaml
+++ b/custom_components/go_musicfox_ha/services.yaml
@@ -1,3 +1,3 @@
 activate_intelligent_mode:
-  name: Activate Intelligent Mode
+  name: Intelligent Mode
   description: Activates the intelligent (heartbeat) playback mode.
